--- a/src/app/routelist/routelist.page.html
+++ b/src/app/routelist/routelist.page.html
@@ -1,4 +1,3 @@
-
 <ion-menu side="start" content-id="main-content">
 
   <ion-header>
@@ -53,10 +52,19 @@
   </ion-header>
 
   <ion-content>
-    <ion-button (click)="onChangeFromFunction()">PATA ME</ion-button>
-    <ion-list *ngFor="let route of routes">
+
+
+
+    <ion-button (click)="sendDataOfTheSelectedRoute()">PATA ME</ion-button>
+    <ion-list *ngFor="let route of routes" (click)="clickme(route.id)">
       <p>{{route.date}}</p>
+      <p>{{dataFromService}}</p>
+      <ion-button (click)="sendDataOfTheSelectedRoute()">PATA ME</ion-button>
     </ion-list>
+   
+
+
+
     <ion-item class="from">
       <ion-datetime placeholder="{{'routelist-from.title' | translate}}"displayFormat="DD/MM/YYYY" (ionChange)="onChangeFromFunction()" [(ngModel)]="startDate" ></ion-datetime>
     </ion-item>
@@ -64,15 +72,15 @@
       <ion-datetime class="text-center" placeholder="{{'routelist-to.title' | translate}}" displayFormat="DD/MM/YYYY"(ionChange)="onChangeFromFunction()" [(ngModel)]="endDate"></ion-datetime>
     </ion-item>
     <ion-list>
-      <ion-item *ngFor="let item of filtered">
+      <ion-item *ngFor="let item of filtered" (click)="sendDataOfTheSelectedRoute(item,item.id,item.departure,item.arrival,item.date)">
       <ion-buttons item-start>
         <ion-icon class="icon-size" name="map" ></ion-icon>
       </ion-buttons>
       <ion-buttons item-end>
         <button  class="btn-accept" ion-button color="light">TAKE</button>
       </ion-buttons>
-      <ion-label class="availability">Available</ion-label> <br>
-      <ion-label class="destination" >{{item.destination}}</ion-label> <br>
+      <ion-label class="availability">{{item.arrival}}</ion-label> <br>
+      <ion-label class="destination" >{{item.departure}}</ion-label> <br>
       <ion-label class="date">{{item.date}}</ion-label>
     </ion-item>
     <p class="text-md-danger" *ngIf="invalidSelection">Inavalid Date Selection </p>
@@ -81,7 +89,6 @@
 <!-- 
   <ion-content class="ion-padding" padding>
     <ion-label class="centerlabel searchRoute"> {{'routelist-search.title' | translate}} </ion-label>
-
     <ion-item class="from">
       <ion-datetime placeholder="{{'routelist-from.title' | translate}}"displayFormat="DD/MM/YYYY" (ionChange)="confirm()" [(ngModel)]="selectedDate" ></ion-datetime>
     </ion-item>
@@ -90,7 +97,6 @@
     </ion-item>
     <ion-label class="centerlabel currentDate">{{'routelist-currentDate.title' | translate}}</ion-label>
     <ion-datetime value="2019-10-01T15:43:40.394Z" display-timezone="utc"></ion-datetime>
-
     <ion-list>
       <ion-item>
       <ion-buttons item-start>
@@ -105,9 +111,6 @@
     </ion-item>
     <p class="text-md-danger" >{{'routelist-invalidDate.title' | translate}} </p> 
     </ion-list>
-
-
-
       <ion-list>
       <ion-item>
       <ion-buttons item-start>
@@ -129,7 +132,6 @@
   
   <!-- 
   <div class="myiontab">
-
     <ion-tab-bar slot="bottom" class="ion-no-border">
       <ion-buttons class="addBtn"  vertical="bottom" horizontal="center" translucent="true">
         <button class="adBtn2">
@@ -139,19 +141,12 @@
     </ion-tab-bar>
   
   </div>
-
-
-
-
-
 <ion-menu side="start" content-id="main-content">
-
   <ion-header>
     <ion-toolbar translucent>
       <ion-title class="menuToolbar" >{{'routelist-menu.title' | translate}}</ion-title>
     </ion-toolbar>
   </ion-header>
-
   <ion-content>
     <ion-list>
       <ion-item routerLink="/home2/routelist" >
@@ -185,7 +180,6 @@
     </ion-list>
   </ion-content>
 </ion-menu>
-
   <ion-header>
     <ion-toolbar>
       <ion-buttons class="nav-buttons" slot="end">
@@ -196,12 +190,9 @@
       <ion-title>{{'routelist-myRoutes.title' | translate}}</ion-title>
     </ion-toolbar>
   </ion-header>
-
   
-
   <ion-content class="ion-padding" padding>
     <ion-label class="centerlabel searchRoute"> {{'routelist-search.title' | translate}} </ion-label>
-
     <ion-item class="from">
       <ion-datetime placeholder="{{'routelist-from.title' | translate}}"displayFormat="DD/MM/YYYY" (ionChange)="confirm()" [(ngModel)]="selectedDate" ></ion-datetime>
     </ion-item>
@@ -210,7 +201,6 @@
     </ion-item>
     <ion-label class="centerlabel currentDate">{{'routelist-currentDate.title' | translate}}</ion-label>
     <ion-datetime value="2019-10-01T15:43:40.394Z" display-timezone="utc"></ion-datetime>
-
     <ion-list>
       <ion-item *ngFor="let item of custs; let e=index">
       <ion-buttons item-start>
@@ -225,7 +215,6 @@
     </ion-item>
     <p class="text-md-danger" >{{'routelist-invalidDate.title' | translate}} </p> 
     </ion-list>
-
       <ion-list>
       <ion-item *ngFor="let name of names; let m=index">
       <ion-buttons item-start>
@@ -247,7 +236,6 @@
   
   
   <div class="myiontab">
-
     <ion-tab-bar slot="bottom" class="ion-no-border">
       <ion-buttons class="addBtn" (click)="navigateToCreateRoutePage()" vertical="bottom" horizontal="center" translucent="true">
         <button class="adBtn2">
