--- a/src/app/routelist/routelist.page.html
+++ b/src/app/routelist/routelist.page.html
@@ -54,23 +54,52 @@
   <ion-content>
 
 
-
+<!-- 
     <ion-button (click)="sendDataOfTheSelectedRoute()">PATA ME</ion-button>
     <ion-list *ngFor="let route of routes" (click)="clickme(route.id)">
       <p>{{route.date}}</p>
       <p>{{dataFromService}}</p>
       <ion-button (click)="sendDataOfTheSelectedRoute()">PATA ME</ion-button>
     </ion-list>
-   
+    -->
 
 
 
+    <!-- <ion-list *ngFor="let customPicks of myPickUp; let i = index">
+      <ion-item>{{customPicks}}</ion-item>
+    </ion-list> -->
+    <ion-label>CUSTOM ROUTES</ion-label>
+    <!-- <ion-item *ngFor="let papapa of theRealPickUp.CUSTPICKUPS; let i = index">
+      <ion-buttons item-start>
+        <ion-icon class="icon-size" name="map" ></ion-icon>
+      </ion-buttons>
+      <ion-buttons item-end>
+        <button  class="btn-accept" ion-button color="light">TAKE</button>
+      </ion-buttons>
+      <ion-label class="availability">{{papapa.PICKUP_ADDRESS}}</ion-label> <br>
+      <ion-label class="destination" >{{papapa.PICKUP_ADDRESS}}</ion-label> <br>
+      <ion-label class="date">{{papapa.ROUTE_TIME}}</ion-label>
+    </ion-item> -->
+    
     <ion-item class="from">
-      <ion-datetime placeholder="{{'routelist-from.title' | translate}}"displayFormat="DD/MM/YYYY" (ionChange)="onChangeFromFunction()" [(ngModel)]="startDate" ></ion-datetime>
+      <ion-datetime placeholder="{{'routelist-from.title' | translate}}" displayFormat="DD/MM/YYYY" (ionChange)="onChangeFromFunction()" [(ngModel)]="startDate" ></ion-datetime>
     </ion-item>
     <ion-item class="to" >
       <ion-datetime class="text-center" placeholder="{{'routelist-to.title' | translate}}" displayFormat="DD/MM/YYYY"(ionChange)="onChangeFromFunction()" [(ngModel)]="endDate"></ion-datetime>
     </ion-item>
+    <ion-list >
+      <ion-item *ngFor="let selectedDatesFromCustomPickups of chrBusCustRoutesJSONparseToArray.CUSTPICKUPS  " (click)="sendDataToRouteStarted(selectedDatesFromCustomPickups)">
+        <ion-buttons item-start>
+        <ion-icon class="icon-size" name="map" ></ion-icon>
+      </ion-buttons>
+      <ion-buttons item-end>
+        <button  class="btn-accept" ion-button color="light">TAKE</button>
+      </ion-buttons>
+      <ion-label class="availability" ></ion-label> <br>
+      <ion-label class="destination">{{selectedDatesFromCustomPickups.PICKUP_ADDRESS}}</ion-label> <br>
+      <ion-label class="date"></ion-label>
+      </ion-item>
+    </ion-list>
     <ion-list>
       <ion-item *ngFor="let item of filtered" (click)="sendDataOfTheSelectedRoute(item,item.id,item.departure,item.arrival,item.date)">
       <ion-buttons item-start>
@@ -86,6 +115,33 @@
     <p class="text-md-danger" *ngIf="invalidSelection">Inavalid Date Selection </p>
     </ion-list>
   </ion-content>
+  <div class="myiontab">
+    <ion-tab-bar slot="bottom" class="ion-no-border">
+      <ion-buttons class="addBtn" (click)="navigateToCreateRoutePage()" vertical="bottom" horizontal="center" translucent="true">
+        <button class="adBtn2">
+          <ion-icon name="add"></ion-icon>
+        </button>
+      </ion-buttons>
+      <ion-tab-button tab="routelist" (click)="navigateToRouteListPage()">
+        <ion-icon class="iconStyling" name="home"></ion-icon>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="wallet" class="comments" (click)="navigateToWalletPage()">
+        <ion-icon class="iconStyling" name="wallet"></ion-icon>
+      </ion-tab-button>
+  
+      <svg height="50" viewBox="0 0 100 50" width="100" xmlns="http://www.w3.org/2000/svg"><path d="M100 0v50H0V0c.543 27.153 22.72 49 50 49S99.457 27.153 99.99 0h.01z" fill="red" fill-rule="evenodd"></path></svg>
+  
+      <ion-tab-button tab="route-history" class="notifs" (click)="navigateToRouteHistoryPage()">
+        <ion-icon class="iconStyling" name="file-tray-full"></ion-icon>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="settings" (click)="navigateToSettingsPage()">
+        <ion-icon class="iconStyling" name="settings"></ion-icon>
+      </ion-tab-button>
+    </ion-tab-bar>
+  
+  </div>
 <!-- 
   <ion-content class="ion-padding" padding>
     <ion-label class="centerlabel searchRoute"> {{'routelist-search.title' | translate}} </ion-label>
@@ -235,31 +291,5 @@
   </ion-content>
   
   
-  <div class="myiontab">
-    <ion-tab-bar slot="bottom" class="ion-no-border">
-      <ion-buttons class="addBtn" (click)="navigateToCreateRoutePage()" vertical="bottom" horizontal="center" translucent="true">
-        <button class="adBtn2">
-          <ion-icon name="add"></ion-icon>
-        </button>
-      </ion-buttons>
-      <ion-tab-button tab="routelist" (click)="navigateToRouteListPage()">
-        <ion-icon class="iconStyling" name="home"></ion-icon>
-      </ion-tab-button>
   
-      <ion-tab-button tab="wallet" class="comments" (click)="navigateToWalletPage()">
-        <ion-icon class="iconStyling" name="wallet"></ion-icon>
-      </ion-tab-button>
-  
-      <svg height="50" viewBox="0 0 100 50" width="100" xmlns="http://www.w3.org/2000/svg"><path d="M100 0v50H0V0c.543 27.153 22.72 49 50 49S99.457 27.153 99.99 0h.01z" fill="red" fill-rule="evenodd"></path></svg>
-  
-      <ion-tab-button tab="route-history" class="notifs" (click)="navigateToRouteHistoryPage()">
-        <ion-icon class="iconStyling" name="file-tray-full"></ion-icon>
-      </ion-tab-button>
-  
-      <ion-tab-button tab="settings" (click)="navigateToSettingsPage()">
-        <ion-icon class="iconStyling" name="settings"></ion-icon>
-      </ion-tab-button>
-    </ion-tab-bar>
-  
-  </div>
  -->
