--- a/src/app/routestarted/routestarted.page.html
+++ b/src/app/routestarted/routestarted.page.html
@@ -8,11 +8,11 @@
 
   <ion-content>
     <ion-list>
-      <ion-item routerLink="/home/feed" >
+      <ion-item (click)="goBackToRouteListPage()" >
         <ion-icon class="iconStyling" name="home" slot="start"></ion-icon>
         <ion-label class="menuTxt" >{{'routelist-myRoutes.title' | translate}}</ion-label>
       </ion-item>
-      <ion-item (click)="navigateToWalletPage()">
+      <ion-item (click)="goToWalletPageWithDriverId()">
         <ion-icon class="iconStyling" name="wallet" slot="start"></ion-icon>
         <ion-label class="menuTxt" >{{'routelist-myWallet.title' | translate}}</ion-label>
       </ion-item>
@@ -59,9 +59,8 @@
   <ion-content scroll="true">
 
     <ion-label  style="padding: 1px;" class="ion-text-center">
-      {{dataFromRouteListJSON.passengerFirstName}}
       <ion-item (click)="navigateToRouteDetails()" class="destItem" lines="none">
-        <button  class="destBtn">{{dataFromRouteListJSON.departure}}</button>
+        <button  class="destBtn">{{dataFromRouteListJSON.PICKUP_ADDRESS}}</button>
         <ion-icon class="dmpIconStyle destIcon" name="map" side="end" ></ion-icon>
       </ion-item>
       <ion-item class="timeItem" lines="none">
@@ -69,7 +68,7 @@
         <button class="timeBtn"><a class="numberStyle">{{dataFromRouteListJSON.time}}</a>hours</button>
       </ion-item>
       <ion-item (click)="navigateToPassengersPage()" class="passItem" lines="none">
-        <button class="passBtn"><a class="numberStyle">{{dataFromRouteListJSON.passengerNumber}}</a>Passengers</button>
+        <button class="passBtn"><a class="numberStyle">{{dataFromRouteListJSON.passengersNumber}}</a>Passengers</button>
         <ion-icon class="dmpIconStyle passIcon" name="walk" side="start" ></ion-icon>
       </ion-item>
     </ion-label>
@@ -78,28 +77,28 @@
       <ion-button  (click)="startRoute()" class="btnStyle2">{{'routeStarted-startRoute.title' | translate}}</ion-button>
     </ion-list>
     <ion-list class="ionListClass">
-      <ion-button (click)="navigateToMapPage()"  class="btnStyle">{{'routeStarted-map.title' | translate}}</ion-button>
+      <ion-button (click)="beforeRouteStartedGoTechInspectPage()"  class="btnStyle">{{'routeStarted-map.title' | translate}}</ion-button>
     </ion-list>
     <ion-list class="ionListClass">
-      <ion-button (click)="navigateToPassengersPage()"class="btnStyle">{{'routeStarted-passengers.title' | translate}}</ion-button>
+      <ion-button (click)="getPassengersInformationFromRouteListSelection()"class="btnStyle">{{'routeStarted-passengers.title' | translate}}</ion-button>
     </ion-list>
     <ion-list class="ionListClass">
-      <ion-button  (click)="navigateToRouteDetails()" class="btnStyle">{{'routeStarted-routeDetails.title' | translate}}</ion-button>
+      <ion-button  (click)="getRoutingInformationPathFromRouteListSelection()" class="btnStyle">{{'routeStarted-routeDetails.title' | translate}}</ion-button>
     </ion-list>
   </ion-content>
   <div class="myiontab">
 
     <ion-tab-bar slot="bottom" class="ion-no-border">
-      <ion-buttons class="addBtn" (click)="navigateToVehiclePage()" vertical="bottom" horizontal="center" translucent="true">
-        <button (click)="navigateToVehiclePage()" class="adBtn2">
+      <ion-buttons class="addBtn" (click)="goBackToRouteListPage()" vertical="bottom" horizontal="center" translucent="true">
+        <button (click)="goBackToRouteListPage()" class="adBtn2">
           <ion-icon  name="arrow-back"></ion-icon>
         </button>
       </ion-buttons>
-      <ion-tab-button tab="routelist" (click)="navigateToRouteListPage()">
+      <ion-tab-button tab="routelist" (click)="goBackToRouteListPage()">
         <ion-icon class="iconStyling" name="home"></ion-icon>
       </ion-tab-button>
   
-      <ion-tab-button tab="wallet" class="comments" (click)="navigateToWalletPage()">
+      <ion-tab-button tab="wallet" class="comments" (click)="goToWalletPageWithDriverId()">
         <ion-icon class="iconStyling" name="wallet"></ion-icon>
       </ion-tab-button>
   
