--- a/src/app/techinspect/techinspect.page.html
+++ b/src/app/techinspect/techinspect.page.html
@@ -75,11 +75,12 @@
       <ion-button  class="btnStyle">BUS</ion-button>
     </ion-list> -->
     <form [formGroup]="commentForm" (ngSubmit)="submit()">
+
      <div *ngIf="eng" class="centerItems styleItems ion-padding">
       <ion-label class="labelIon">{{'vehicleCheck-checkArea.title' | translate}}</ion-label>
       <ion-item class="itemIon" lines="none">
         <ion-select formControlName="measurementData" [(ngModel)]="checkpointen"  interface="action-sheet">
-          <ion-select-option  *ngFor="let enlang of enlangs" [value]="enlang">
+          <ion-select-option  *ngFor="let enlang of englishLanguageJSON; let i = index" [value]="enlang">
                       {{enlang}}
           </ion-select-option>
         </ion-select>
@@ -95,6 +96,8 @@
           </ion-select-option>
         </ion-select>
       </ion-item >
+
+
     </div>
 
    
