--- a/src/app/techinspect/techinspect.page.html
+++ b/src/app/techinspect/techinspect.page.html
@@ -80,8 +80,8 @@
       <ion-label class="labelIon">{{'vehicleCheck-checkArea.title' | translate}}</ion-label>
       <ion-item class="itemIon" lines="none">
         <ion-select formControlName="measurementData" [(ngModel)]="checkpointen"  interface="action-sheet">
-          <ion-select-option  *ngFor="let enlang of englishLanguageJSON; let i = index" [value]="enlang">
-                      {{enlang}}
+          <ion-select-option  *ngFor="let enlang of englishLanguageJSON.CHECKS; let i = index" [value]="enlang">
+                      {{enlang.CHECKPOINT}}
           </ion-select-option>
         </ion-select>
       </ion-item >
@@ -100,7 +100,11 @@
 
     </div>
 
-   
+    <ion-buttons type="submit" class="hide-on-keyboard-open addBtn" vertical="bottom" horizontal="center" translucent="true">
+      <button (click)="wannaBeData()" class="adBtn2">
+        {{'vehicleCheck-start.title' | translate}}
+      </button>
+    </ion-buttons>
   
     <ion-list class="ionListClass">  
       <textarea formControlName="comment" type="text" class="txtArea" rows="4" cols="50" [(ngModel)]="amount"  (change)=check(amount)>
@@ -115,8 +119,8 @@
     <div class="myiontab">
 
       <ion-tab-bar slot="bottom" class="ion-no-border">
-        <ion-buttons type="submit" class="hide-on-keyboard-open addBtn" (click)="sendData()" vertical="bottom" horizontal="center" translucent="true">
-          <button (click)="map()" class="adBtn2">
+        <ion-buttons type="submit" class="hide-on-keyboard-open addBtn" vertical="bottom" horizontal="center" translucent="true">
+          <button class="adBtn2">
             {{'vehicleCheck-start.title' | translate}}
           </button>
         </ion-buttons>
