--- a/src/app/wallet/wallet.page.html
+++ b/src/app/wallet/wallet.page.html
@@ -60,7 +60,7 @@
       </ion-img>
 
      
-        <p *ngFor="let wallet of wallets" class="money">{{wallet.euro}}</p> 
+        <!-- <p *ngFor="let wallet of wallets" class="money">{{wallet.CREDIT}}</p>  -->
  
 
     </ion-item>
